--- a/Working/WindowsFormsApp1/Koz.Windows.Forms/Koz.Windows.Forms.csproj
+++ b/Working/WindowsFormsApp1/Koz.Windows.Forms/Koz.Windows.Forms.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="BackColorKeeper.cs" />
     <Compile Include="CaretController.cs" />
+    <Compile Include="GraphicsWrapper.cs" />
     <Compile Include="NativeMethods.cs" />
     <Compile Include="NativeWindowBase.cs" />
     <Compile Include="OwnerDrawController.cs" />
