--- a/Working/WindowsFormsApp1/Koz.Windows.Forms/Koz.Windows.Forms.csproj
+++ b/Working/WindowsFormsApp1/Koz.Windows.Forms/Koz.Windows.Forms.csproj
@@ -46,7 +46,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BackColorKeeper.cs" />
+    <Compile Include="CaretBitmap.cs" />
     <Compile Include="CaretController.cs" />
+    <Compile Include="FontHandleWrapper.cs" />
     <Compile Include="GraphicsWrapper.cs" />
     <Compile Include="NativeMethods.cs" />
     <Compile Include="NativeWindowBase.cs" />
