--- a/Working/WindowsFormsApp1/Koz.Windows.Forms/Koz.Windows.Forms.csproj
+++ b/Working/WindowsFormsApp1/Koz.Windows.Forms/Koz.Windows.Forms.csproj
@@ -59,7 +59,8 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="TextEditorRenderer.cs" />
-    <Compile Include="UTL.cs" />
+    <Compile Include="LayoutUtils.cs" />
+    <Compile Include="WordBreakCharType.cs" />
     <Compile Include="WordBreakCode.cs" />
     <Compile Include="WordBreakEventArgs.cs" />
     <Compile Include="WrapModeController.cs" />
