--- a/CustomDrawApp/CustomDrawApp/CustomDrawApp.csproj
+++ b/CustomDrawApp/CustomDrawApp/CustomDrawApp.csproj
@@ -85,5 +85,8 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="DateTimeEx.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
