--- a/NET Framework/CS/CustomTextBox/CustomTextBox/CustomTextBox.csproj
+++ b/NET Framework/CS/CustomTextBox/CustomTextBox/CustomTextBox.csproj
@@ -89,6 +89,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="SafeStringBuffer.cs" />
+    <Compile Include="StringBuilderCache.cs" />
     <EmbeddedResource Include="BaseForm.resx">
       <DependentUpon>BaseForm.cs</DependentUpon>
     </EmbeddedResource>
